# microlicious

./: README.md
app/: README.md  epic.cabal  stack.yaml
app/src/: Epic.hs  Main.hs  Options.hs  Server.hs
